--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
     "jsdom": "^20.0.3",
+    "sass": "^1.56.2",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
   }
